--- a/repo/Dockerfile
+++ b/repo/Dockerfile
@@ -3,4 +3,4 @@ FROM busybox:1.35.0-uclibc as busybox
 FROM gcr.io/distroless/base-debian12
 WORKDIR /var/www/html
 COPY --from=busybox /bin/ /bin/
-CMD ["/bin/sh"]
+CMD ["/bin/sh", "-c", "while true; do sleep 3600; done"]
